Flamingo Framework 2.0 Created Simple Welcome page with CRUD Test. Optimizations of code, Created new structure of flamingo framework. Added emulator for Apache's "mod_rewrite"

--- a/.htaccess
+++ b/.htaccess
@@ -11,4 +11,8 @@
 
     RewriteCond %{REQUEST_URI} (\.\w+$) [NC]
     RewriteRule ^(.*)$ public/$1
+
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^ server.php
 </IfModule>
