--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/database": "^7.4",
+        "illuminate/database": "8.24.0",
         "php-parallel-lint/php-console-color": "^0.2.0",
         "romanato/php-flashingo-messages": "^1.0",
         "illuminate/pagination": "^7.9.2"
